scorecard responsive styling (TODO: overflow on v.narrow); merge unassigned with other nominal issues, for consistency

--- a/web/packages/web-client/styles/main.scss
+++ b/web/packages/web-client/styles/main.scss
@@ -34,6 +34,7 @@ html {
     justify-content: center;
     align-content: center;
     align-items: center;
+    padding: 14px;
     height: calc(100vh - 50px * 2);
   }
   #footer {
